discussion/kv_engine/128637/128637_rev20_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make EPBucket::getFileStats use stats.def.h and StatCollector

Change-Id: I85e683edb403ac9a084df169396d76906791e501

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-26 14:10:21.000000000
Message: 
Uploaded patch set 20.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-26 15:15:24.000000000
Message: 
Patch Set 20: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3989/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:2: error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
#error A STAT macro must be defined before including stats.def.h
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:6: error: use of undeclared identifier "ep_db_data_size" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:23: error: use of undeclared identifier "bytes" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:30: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:32: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:34: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:35: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                  ^
                                  ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3989/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:2:
error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3989/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29779/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29779/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4318/ : FAILURE

Failure of a CTest test [2020-08-26T14:29:08.575Z] 168/410 Test #287: kv-engine-check-header-define-once-guard .................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5207/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5296/ : FAILURE

Failure of a CTest test [2020-08-26T14:47:47.226Z] 363/413 Test #290: kv-engine-check-header-define-once-guard .................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5296/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5399/ : FAILURE

Failure of a CTest test [2020-08-26T14:48:55.490Z] 340/391 Test #269: kv-engine-check-header-define-once-guard .................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13115/ : FAILURE

AddressSanitizer issue: heap-use-after-free ../kv_engine/engines/ep/src/objectregistry.cc:153 in ObjectRegistry::onSwitchThread(EventuallyPersistentEngine*, bool) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13115/ )

Failure of a CTest test [2020-08-26T15:01:22.843Z]  28/396 Test #228: ep_testsuite.full_eviction.comp_active ......................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13115/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2515/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25810/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
